# MicroStudio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: CommandExecutor.h  CompilerHelper.h  DebuggerHelper.h  FileHandler.h  GuiManager.h  JsonParser.h  ProjectExplorer.h  ShellManager.h  TreeNode.h
initialize/: imgui.ini
projects/: malw.json
src/: CommandExecutor.cpp  CompilerHelper.cpp  DebuggerHelper.cpp  FileHandler.cpp  GuiManager.cpp  JsonParser.cpp  ProjectExplorer.cpp  ShellManager.cpp  TreeNode.cpp  main.cpp
